<resources>
    <string name="app_name">CinemaApp</string>
    <string name="search_field">Search field</string>
    <string name="result">Search results</string>
    <string name="button_text">Search</string>
    <string name="login">Login</string>
    <string name="username">User name</string>
    <string name="password">Password</string>

    <string name="error_message">Something went wrong :(</string>
    <string name="create_seance">Create Seance</string>
    <string name="day">Day</string>
    <string name="start_day">Start Time</string>
    <string name="movie_id">Movie Id</string>
    <string name="add_seance">Add Seance</string>
    <string name="seance_id">Seance Id</string>
    <string name="update_seance">Update Seance</string>
    <string name="delete_seance">Delete</string>
</resources>