<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/horizontal_padding"
    android:paddingTop="16dp"
    android:paddingEnd="@dimen/horizontal_padding"
    tools:context=".activities.UpdateSeanceActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <EditText
            android:id="@+id/et_seance_movie_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/movie_id"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/et_seance_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/start_day"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/et_seance_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/day"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="25sp" />

        <Button
            android:id="@+id/update_seance_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_seance" />

        <Button
            android:id="@+id/delete_seance_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_seance" />
    </LinearLayout>
</LinearLayout>